--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularCookbookUdemy</title>
+  <title>Cookbook</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" id="appIcon" href="https://s1.qwant.com/thumbr/0x380/8/4/4f0b85c09332cf6399305520c8b196cbe790300d01ea5d01d9e6e5115104d1/204-2046846_recipe-icon-png-recipe-clip-art-png.png?u=https%3A%2F%2Fwww.jing.fm%2Fclipimg%2Ffull%2F204-2046846_recipe-icon-png-recipe-clip-art-png.png&q=0&b=1&p=0&a=1">
 </head>
 <body>
   <app-root></app-root>
